# mottaka-printer-brother

./: brother_ql_web.py  pyproject.toml  requirements.txt
