[tool.poetry]
name = "mottaka-printer-brother"
version = "0.1.0"
description = "API and UI specifically for printing office guest passes"
authors = [
    "Gunnsteinn Þórisson <gussi@ok.is>",
    "Philipp Klaus <klaus@physik.uni-frankfurt.de>",
]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
brother-ql = "^0.9.4"
bottle = "^0.12.25"
jinja2 = "^3.1.2"
pillow = "^9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
